# mip-core

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  adding_a_package.md  download-stats.json
.github/ISSUE_TEMPLATE/: config.yml  request-package.yml
.github/workflows/: add-package.yml  assemble-index.yml  build-and-upload-packages.yml  build-package.yml  build-request.yml  debug-macos-arm64.yml  delete-packages.yml  pr-build.yml  prepare-packages.yml  probe-windows-fmm2d.yml  push-build.yml  scheduled-build.yml  submit-package-request.yml
mexopts/linux_x86_64/: g++_static.xml  gcc_static.xml
mexopts/macos_arm64/: g++_static.xml  gcc_static.xml
mexopts/macos_x86_64/: g++_static.xml  gcc_static.xml
mip_build_helpers/: __init__.py  pyproject.toml  setup.py
mip_build_helpers/mip_build_helpers/: __init__.py  build_helpers.py  create_load_and_unload_scripts.py  get_current_platform_tag.py
mip_build_helpers/mip_build_helpers.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
notes/: MATLAB-GLIBC.md
scripts/: README.md  add_packages_from_issue.py  affected_builds.py  assemble_index.py  build_and_upload_packages.py  build_packages.py  build_request_from_issue.py  bundle_and_upload_packages.py  bundle_runtime_libs.m  compile_packages.m  delete_packages.py  local_build.sh  non_gh_actions_run_all.sh  package_setup.py  prepare_one.py  prepare_packages.py  scheduled_check.py  setup_mex_compilers.m  test_one.m  upload_one.py  upload_packages.py
scripts2/: README.md  prepare_packages.py
site/: index.html
tests/: test_surfacefun.py
tools/: README.md
(+15 files in other folders)
